k8s/monitoring/smokeping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  namespace: monitoring
  labels:
    app: smokeping
spec:
  selector:
    matchLabels:
      app: smokeping
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
        - name: smokeping
          image: ghcr.io/jwigley/smokeping-speedtest:latest@sha256:b9617807a59c2543772104f8842c474ee4d6a0cf2e4e9c406aed24ebdf9f9869
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: smokeping-confmap
              mountPath: /smokeping-confmap
            - name: datastore
              mountPath: /data
            - name: config
              mountPath: /config
      volumes:
        - name: smokeping-confmap
          configMap:
            name: smokeping-confmap
        - name: config
          emptyDir: {}
        - name: datastore
          hostPath:
            path: /downloads/config/smokeping
            type: DirectoryOrCreate
      restartPolicy: Always
