k8s/monitoring/smokeping/custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  namespace: monitoring
  labels:
    app: smokeping
spec:
  selector:
    matchLabels:
      app: smokeping
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
        - name: smokeping
          image: ghcr.io/jwigley/smokeping-speedtest:latest@sha256:c4899d515a3385892117344060def6cfc0c26587ac6264bf352c14d3b194fbba
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: smokeping-confmap
              mountPath: /smokeping-confmap
            - name: datastore
              mountPath: /data
            - name: config
              mountPath: /config
      volumes:
        - name: smokeping-confmap
          configMap:
            name: smokeping-confmap
        - name: config
          emptyDir: {}
        - name: datastore
          hostPath:
            path: /downloads/config/smokeping
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeping-ingress
  namespace: monitoring
  labels:
    app: smokeping
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - smokeping.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: smokeping.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smokeping
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  namespace: monitoring
  labels:
    app: smokeping
spec:
  selector:
    app: smokeping
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
